[package]
name = "abenga_site"
version = "0.0.0"
authors = ["Horace <horace@abenga.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
postgres = "0.18"
rocket_contrib = "0.4.5"
serde = {"version" = "1.0"}
serde_json = "1.0"
toml = "0.5.7"
