[package]
name = "abenga_site"
version = "0.0.0-alpha"
authors = ["Horace <horace@abenga.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rocket = "0.4"
postgres = "0.19"
serde = {"version" = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5.7"
uuid = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4"
default-features = true
features = ["json", "serve", "handlebars_templates", "uuid"]