[package]
name = "abenga_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
axum = "0.6"
chrono = "0.4"
diesel = { version = "2.1.0", features = ["chrono", "postgres"] }
dotenvy = "0.15"
postgres = "0.19"
serde = { "version" = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
